fix: added new endpoint to check if works
